stop overlap of sorting arrow with column header

--- a/src/components/table/table-header/table-header.scss
+++ b/src/components/table/table-header/table-header.scss
@@ -62,6 +62,11 @@
   }
 }
 
+.carbon-table-header__icon--right {
+  position: relative;
+  top: 0;
+}
+
 .carbon-table-header--sortable {
   cursor: pointer;
 
